WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21038
Uncaught exceptions in regex replace callbacks crash webkit
https://bugs.webkit.org/show_bug.cgi?id=21038
Summary
Uncaught exceptions in regex replace callbacks crash webkit
Mark Luffel
Reported
2008-09-23 13:55:49 PDT
Any javascript exception thrown from the callback to a string replacement will cause a crash. Catching the exception within the callback prevents the crash. This is a regression relative to Safari 3.1.2 The bug is present in
r35203
and
r36766
.
Attachments
patch
(8.01 KB, patch)
2008-09-23 23:37 PDT
,
Geoffrey Garen
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2008-09-23 14:12:43 PDT
<
rdar://problem/6240812
>
Geoffrey Garen
Comment 2
2008-09-23 23:37:30 PDT
Created
attachment 23739
[details]
patch
Geoffrey Garen
Comment 3
2008-09-23 23:44:35 PDT
Committed revision 36842.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug